chore(api-sync): schedule daily automated API sync to run at 10:00 UTC
- updated scheduler to trigger API sync once daily at 10:00 AM (UTC)
- kept CSV imports manual as per existing workflow
- ensured no changes to other sync scripts or routes

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "xlsx": "^0.18.5"
