--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "import:all:lossofsale": "node sync/csv/import_all_lossofsale.js",
     "sync:booking": "node sync/api/sync_booking.js",
     "sync:rentout": "node sync/api/sync_rentout.js",
+    "sync:return": "node sync/api/sync_rentout.js",
     "sync:stores": "node sync/api/sync_storelist.js",
     "test:api": "node scripts/test-api-validation.js",
     "test:duplicates": "node scripts/test-duplicate-prevention.js",
