fix(return-sync): investigate and resolve issues with return API data synchronization
- analyzed inconsistencies in return API sync responses
- fixed data mapping and sync flow issues
- improved reliability of return data ingestion
- added safeguards to prevent partial or failed syncs

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "import:all:walkin": "node sync/csv/import_all_walkin.js",
     "import:all:lossofsale": "node sync/csv/import_all_lossofsale.js",
     "sync:booking": "node sync/api/sync_booking.js",
-    "sync:rentout": "node sync/api/sync_rentout.js",
-    "sync:return": "node sync/api/sync_rentout.js",
+    "sync:return": "node sync/api/sync_return.js",
     "sync:stores": "node sync/api/sync_storelist.js",
     "test:api": "node scripts/test-api-validation.js",
     "test:duplicates": "node scripts/test-duplicate-prevention.js",
