fix(return-sync): rectify defect in return API synchronization process
- corrected return API data mapping and processing logic
- resolved sync failures causing incomplete return records
- ensured consistent ingestion during automated and manual sync runs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon server.js",
     "test": "node scripts/test-api-validation.js",
     "verify:data": "node verify-mongodb-data.js",
-    "sync:api": "node sync/runAll.js",
+    "verify:sync": "node scripts/verify-sync-system.js",
+    "sync:api": "node sync/apiOnly.js",
     "sync:all": "node sync/runAll.js",
     "import:walkin": "node sync/csv/import_walkin.js",
     "import:lossofsale": "node sync/csv/import_lossofsale.js",
